modules/k8s-apps/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: admin
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-test
